tests/hep3_flow_narrow_bad_no_guard.hop
// Verifies HEP 3 flow narrow bad no guard.
import "hophop/feature/optional"

// if x == null { } (empty body — does NOT terminate) gives no continuation narrowing.
pub fn bad(x ?*i32) i32 {
	if x == null {}
	return *x
}
